--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <title>Hiking is my hobby</title>
     <style>
       :root {
-        --light-color: radial-gradient(
-          328px at 2.9% 15%,
-          rgb(191, 224, 251) 0%,
-          rgb(232, 233, 251) 25.8%,
-          rgb(252, 239, 250) 50.8%,
-          rgb(234, 251, 251) 77.6%,
-          rgb(240, 251, 244) 100.7%
+        --light-color: linear-gradient(
+          109.6deg,
+          rgb(17, 151, 147) 11.2%,
+          rgb(154, 214, 212) 55.4%,
+          rgb(255, 233, 171) 100.2%
         );
         --dark-color: linear-gradient(
           109.6deg,
@@ -27,7 +25,8 @@
         background-repeat: no-repeat;
       }
       h1 {
-        font-size: 50px;
+        font-size: 40px;
+        line-height: 1.5;
         margin: 0 auto;
         max-width: 600px;
         border: 1px solid white;
@@ -36,6 +35,7 @@
       }
       img {
         width: 100%;
+        border-radius: 10px;
       }
       p {
         text-align: center;
@@ -61,6 +61,13 @@
       .header {
         display: flex;
         justify-content: end;
+      }
+      .intro-picture {
+        transition: all 150ms ease-in-out;
+      }
+      .intro-picture:hover {
+        filter: contrast(70%);
+        transform: scale(1.1);
       }
       .gallery {
         margin: 10px auto;
@@ -110,10 +117,13 @@
     <div class="container">
       <h1>Do you like hiking?</h1>
       <div class="gallery">
-        <img
-          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/061/359/original/01.jpg?1672834914"
-          alt="hiking"
-        />
+        <a href="https://en.wikipedia.org/wiki/Hiking" target="_blank">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/061/359/original/01.jpg?1672834914"
+            alt="hiking"
+            class="intro-picture"
+          />
+        </a>
         <img
           src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/061/360/original/02.jpg?1672834943"
           alt="hiking"
