--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       }
       p {
         text-align: center;
+        line-height: 1.5;
         margin: 20px auto;
         font-size: 20px;
         max-width: 600px;
@@ -64,6 +65,8 @@
       }
       .intro-picture {
         transition: all 150ms ease-in-out;
+        margin-top: 10px;
+        max-width: 600px;
       }
       .intro-picture:hover {
         filter: contrast(70%);
@@ -72,6 +75,13 @@
       .gallery {
         margin: 10px auto;
         max-width: 600px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap: 10px;
+      }
+      .gallery img:hover {
+        transform: scale(2);
+        transition: all 150ms ease-in-out;
       }
       .wiki-link {
         text-align: left;
@@ -99,6 +109,7 @@
       .footer a {
         color: rgb(0, 0, 206);
         text-decoration: none;
+        line-height: 1.5;
       }
       .container {
         background: white;
@@ -116,16 +127,20 @@
     </div>
     <div class="container">
       <h1>Do you like hiking?</h1>
-      <div class="gallery">
+
+      <div class="intro">
         <a href="https://en.wikipedia.org/wiki/Hiking" target="_blank">
           <img
-            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/061/359/original/01.jpg?1672834914"
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/061/396/original/01.jpg?1672848132"
             alt="hiking"
             class="intro-picture"
+            title="Go to wikipedia"
           />
         </a>
+      </div>
+      <div class="gallery">
         <img
-          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/061/360/original/02.jpg?1672834943"
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/061/397/original/02.jpg?1672848146"
           alt="hiking"
         />
         <img
