--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hiking is my hobby</title>
+    <title>Hiking 💚</title>
     <style>
       :root {
         --light-color: linear-gradient(
@@ -173,7 +173,7 @@
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/061/396/original/01.jpg?1672848132"
             alt="hiking"
             class="intro-picture"
-            title="Go to wikipedia"
+            title="Go to Wikipedia"
           />
         </a>
       </div>
@@ -214,9 +214,12 @@
         forms of walking have health benefits.
         <br />
         <br />
-        <br />
+
         <span class="wiki-link">
-          <a href="https://en.wikipedia.org/wiki/Hiking" target="_blank"
+          <a
+            href="https://en.wikipedia.org/wiki/Hiking"
+            target="_blank"
+            title="Go to Wikipedia"
             >Wikipedia</a
           >
         </span>
@@ -224,9 +227,16 @@
     </div>
     <div class="footer">
       Open-source
-      <a href="https://github.com/Msharova/hobby-page" target="_blank">code</a>,
-      by
-      <a href="https://www.linkedin.com/in/mariasharova3d/" target="_blank"
+      <a
+        href="https://github.com/Msharova/hobby-page"
+        target="_blank"
+        title="git"
+        >code</a
+      >, by
+      <a
+        href="https://www.linkedin.com/in/mariasharova3d/"
+        target="_blank"
+        title="Linkedin"
         >Maria Sharova</a
       >
     </div>
